--- a/src/main/docker/docker-compose.yml
+++ b/src/main/docker/docker-compose.yml
@@ -1,12 +1,15 @@
 version: '3'
 services:
   jaeger:
-    image: jaegertracing/all-in-one:1.18.1
-    container_name: socialmon_jaeger
-    hostname: socialmon_jaeger
+    image: jaegertracing/all-in-one:1.18
+    container_name: ss-jaeger
+    hostname: ss-jaeger
     restart: always
     ports:
-    - 16686:16686
-    - 6831:6831/udp
+      - 16686:16686
+      - 6831:6831/udp
     environment:
       MEMORY_MAX_TRACES: 10000
+    logging:
+      options:
+        max-size: "50m"
